# QtPresentation

./: CMakeLists.txt  Chickens.qml  Julia.cpp  Julia.h  Julia.qml  MainWindow.qml  Multimedia.qml  README  Slide.qml  TicTacToe.qml  Tictactoe.qml  TitlePage.qml  main.cpp  qml.qrc  tictactoe.js
